# asciidoc-html5

./: .commitlintrc.no-scope.yml  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  antora-playbook-local.yml  codecov.yml  package-lock.json  package.json  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  (+2 more)
.greptile/: config.json
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/tests/: input_resolution.rs  mod.rs  output_dir.rs  path_helpers.rs  sdd.rs
cli/src/tests/asciidoctor/: get_started.rs  html_backend.rs  index.rs  localization_support.rs  mod.rs
cli/src/tests/asciidoctor/cli/: index.rs  io_piping.rs  man1_asciidoctor.rs  mod.rs  options.rs  output_file.rs  process_multiple_files.rs  set_safe_mode.rs
cli/src/tests/asciidoctor/html_backend/: index.rs  mod.rs
cli/src/tests/docs/: cli.rs  convert_your_first_file.rs  generate_html.rs  index.rs  introduction.rs  localization_support.rs  mod.rs
cli/src/tests/docs/cli/: index.rs  io_piping.rs  mod.rs  options.rs  output_file.rs  process_multiple_files.rs  set_safe_mode.rs
cli/src/tests/docs/generate_html/: custom_stylesheet.rs  index.rs  mod.rs  stylesheet_modes.rs
cli/tests/: cli.rs
docs/: antora.yml
html5/: ARCHITECTURE.md  Cargo.toml  README.md
html5/src/: asset_writer.rs  copycss.rs  docinfo_handler.rs  html.rs  include_handler.rs  lib.rs  options.rs  outline.rs  renderer.rs
html5/src/tests/: mod.rs  sdd.rs
html5/src/tests/asciidoctor/: docbook_backend.rs  docinfo.rs  get_started.rs  index.rs  localization_support.rs  manpage_backend.rs  mod.rs  reference_safe_mode.rs  safe_modes.rs  tooling.rs  whats_new.rs
html5/src/tests/asciidoctor/api/: convert_files.rs  convert_strings.rs  find_blocks.rs  generate_html_toc.rs  index.rs  mod.rs  options.rs  set_safe_mode.rs  sourcemap.rs
html5/src/tests/asciidoctor/extensions/: block_macro_processor.rs  block_processor.rs  compound_block_processor.rs  docinfo_processor.rs  include_processor.rs  index.rs  inline_macro_processor.rs  logging.rs  mod.rs  postprocessor.rs  preprocessor.rs  register.rs  tree_processor.rs
html5/src/tests/asciidoctor/html_backend/: custom_stylesheet.rs  default_stylesheet.rs  index.rs  mod.rs
html5/src/tests/asciidoctor/migrate/: asciidoc_py.rs  confluence_xhtml.rs  docbook_xml.rs  markdown.rs  mod.rs  ms_word.rs  upgrade.rs
html5/src/tests/asciidoctor_rb/: README.md  attribute_list_test.rs  mod.rs  paragraphs_test.rs  preamble_test.rs
html5/src/tests/assert_html/: dom.rs  mod.rs  xpath.rs
html5/src/tests/docs/: api.rs  convert_your_first_file.rs  docinfo.rs  generate_html.rs  index.rs  introduction.rs  localization_support.rs  mod.rs  reference_safe_mode.rs  safe_modes.rs
html5/src/tests/docs/api/: convert_files.rs  convert_strings.rs  find_blocks.rs  generate_html_toc.rs  index.rs  mod.rs  options.rs  set_safe_mode.rs  sourcemap.rs
html5/src/tests/docs/generate_html/: custom_stylesheet.rs  default_stylesheet.rs  index.rs  mod.rs  stylesheet_modes.rs
sdd/: Cargo.toml  README.md
(+45 files in other folders)
