[workspace]
resolver = "2"
members = ["cli", "html5"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asciidoc-rs/asciidoc-html5"

[workspace.dependencies]
asciidoc-parser = "0.17"
clap = { version = "4", features = ["derive"] }
