[workspace]
members = ["cli", "html5", "sdd"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asciidoc-rs/asciidoc-html5"
# Minimum supported Rust version, matching asciidoc-parser and verified in CI.
rust-version = "1.88.0"
version = "0.1.1"

[workspace.dependencies]
asciidoc-parser = "0.18"
