[package]
name = "adoc"
description = "Command-line AsciiDoc to HTML5 converter (the `adoc` command)"
categories = ["command-line-utilities", "text-processing"]
keywords = ["asciidoc", "html5", "cli", "converter"]
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
asciidoc-html5 = { path = "../html5", version = "=0.1.1" }
clap = { version = "4", features = ["derive"] }
