[package]
categories = ["command-line-utilities", "text-processing"]
description = "Command-line AsciiDoc to HTML5 converter (the `adoc` command)"
edition.workspace = true
keywords = ["asciidoc", "html5", "cli", "converter"]
license.workspace = true
name = "adoc"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
asciidoc-html5 = { path = "../html5", version = "=0.1.2" }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
