[package]
categories = ["text-processing"]
description = "HTML5 renderer for AsciiDoc, compatible with Asciidoctor's html5 backend"
edition.workspace = true
keywords = ["asciidoc", "html5", "converter", "renderer"]
license.workspace = true
name = "asciidoc-html5"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
asciidoc-parser.workspace = true
